# jarnine

./: annonce.db  app.py  creer.py  database.py  index.py  lire.py  main.py  pyproject.toml  suppr.py
static/css/: style.css
templates/: docs.html  index.html
